Enable searching geboorde putten

--- a/new-client/public/simpleLayersConfig.json
+++ b/new-client/public/simpleLayersConfig.json
@@ -386,15 +386,15 @@
   "wfslayers": [
     {
       "id": "4",
-      "caption": "Adresser Göteborg",
-      "url": "https://opengeodata.goteborg.se/services/adresser/wfs/v1",
-      "layers": ["adresser.wfs.v1:adresser"],
-      "searchFields": ["adress"],
-      "infobox": "**Adress:** {adress}  ",
+      "caption": "Geboorde putten",
+      "url": "/geoserver/workspace_datastore_ckan_dataplatform_sandbox/ckan_geboorde-putten/ows",
+      "layers": ["workspace_datastore_ckan_dataplatform_sandbox:ckan_geboorde-putten"],
+      "searchFields": ["putnummer"],
+      "infobox": "**Putnummer:** {putnummer}, **Straatnaam:** {straatnaam}, **huisnummer:** {huisnummer}, **Plaats:** {plaats}",
       "aliasDict": "",
-      "displayFields": ["adress"],
-      "geometryField": "geom",
-      "outputFormat": "GML2",
+      "displayFields": ["putnummer"],
+      "geometryField": "wkb_geometry",
+      "outputFormat": "application/json",
       "infoVisible": false,
       "infoTitle": null,
       "infoText": null,
