enable searching by plaats for geboorde putten

--- a/new-client/public/simpleLayersConfig.json
+++ b/new-client/public/simpleLayersConfig.json
@@ -389,8 +389,8 @@
       "caption": "Geboorde putten",
       "url": "/geoserver/workspace_datastore_ckan_dataplatform_sandbox/ckan_geboorde-putten/ows",
       "layers": ["workspace_datastore_ckan_dataplatform_sandbox:ckan_geboorde-putten"],
-      "searchFields": ["putnummer"],
-      "infobox": "**Putnummer:** {putnummer}, **Straatnaam:** {straatnaam}, **huisnummer:** {huisnummer}, **Plaats:** {plaats}",
+      "searchFields": ["putnummer", "plaats"],
+      "infobox": "**Straatnaam:** {straatnaam}, **huisnummer:** {huisnummer}, **plaats:** {plaats}",
       "aliasDict": "",
       "displayFields": ["putnummer"],
       "geometryField": "wkb_geometry",
