--- a/new-client/public/simpleLayersConfig.json
+++ b/new-client/public/simpleLayersConfig.json
@@ -381,12 +381,65 @@
       "version": "1.1.1",
       "visibleAtStart": false,
       "zIndex": null
+    },
+    {
+      "id": "bag-pand",
+      "attribution": "",
+      "caption": "BAG pand",
+      "content": "",
+      "date": 1698698282109,
+      "displayFields": null,
+      "imageFormat": "image/png",
+      "infoClickSortDesc": true,
+      "infoClickSortProperty": "",
+      "infoClickSortType": "string",
+      "infoFormat": "application/json",
+      "infoOwner": "Källa: Stadsbyggnadskontoret Varberg",
+      "infoText": "Visar alla aktiva medlemsorganisationer i HAJK-samverkan.",
+      "infoTitle": "",
+      "infoUrl": "https://hajkmap.github.io/Hajk/",
+      "infoUrlText": "Välkomstsida",
+      "infoVisible": true,
+      "layers": [
+        "pand"
+      ],
+      "layersInfo": [
+        {
+          "id": "pand",
+          "caption": "BAG pand",
+          "legend": null,
+          "legendIcon": null,
+          "infobox": null,
+          "style": "",
+          "queryable": true
+        }
+      ],
+      "legend": "",
+      "legendIcon": "",
+      "maxZoom": -1,
+      "minZoom": -1,
+      "opacity": 1.0,
+      "owner": "",
+      "projection": "EPSG:3006",
+      "searchDisplayName": "",
+      "searchFields": null,
+      "searchGeometryField": "",
+      "searchOutputFormat": "",
+      "searchPropertyName": "",
+      "searchUrl": "",
+      "serverType": "geoserver",
+      "singleTile": true,
+      "tiled": false,
+      "url": "/bag/wms/v2_0",
+      "version": "1.3.0",
+      "visibleAtStart": false,
+      "zIndex": null
     }
   ],
   "wfslayers": [
     {
-      "id": "4",
-      "caption": "Geboorde putten",
+      "id": "geboorde-putten-wfs",
+      "caption": "Geboorde putten WFS",
       "url": "/geoserver/workspace_datastore_ckan_dataplatform_sandbox/ckan_geboorde-putten/ows",
       "layers": ["workspace_datastore_ckan_dataplatform_sandbox:ckan_geboorde-putten"],
       "searchFields": ["putnummer", "plaats"],
@@ -405,6 +458,7 @@
     }
   ],
   "vectorlayers": [],
-  "wfstlayers": [],
+  "wfstlayers": [
+  ],
   "arcgislayers": []
 }
