--- a/new-client/public/simpleLayersConfig.json
+++ b/new-client/public/simpleLayersConfig.json
@@ -324,7 +324,7 @@
       "serverType": "geoserver",
       "singleTile": true,
       "tiled": false,
-      "url": "/geoserver/workspace_datastore_ckan_dataplatform_sandbox/ckan_geboorde-putten/ows",
+      "url": "http://localhost:81/geoserver/workspace_datastore_ckan_dataplatform_sandbox/ckan_geboorde-putten/ows",
       "version": "1.1.1",
       "visibleAtStart": false,
       "zIndex": null
@@ -377,7 +377,7 @@
       "serverType": "geoserver",
       "singleTile": true,
       "tiled": false,
-      "url": "/geoserver/workspace_datastore_ckan_dataplatform_sandbox/ckan_wijken-en-buurten-2022/ows",
+      "url": "http://localhost:81/geoserver/workspace_datastore_ckan_dataplatform_sandbox/ckan_wijken-en-buurten-2022/ows",
       "version": "1.1.1",
       "visibleAtStart": false,
       "zIndex": null
@@ -440,7 +440,7 @@
     {
       "id": "geboorde-putten-wfs",
       "caption": "Geboorde putten WFS",
-      "url": "/geoserver/workspace_datastore_ckan_dataplatform_sandbox/ckan_geboorde-putten/ows",
+      "url": "http://localhost:81/geoserver/workspace_datastore_ckan_dataplatform_sandbox/ckan_geboorde-putten/ows",
       "layers": ["workspace_datastore_ckan_dataplatform_sandbox:ckan_geboorde-putten"],
       "searchFields": ["putnummer", "plaats"],
       "infobox": "**Straatnaam:** {straatnaam}, **huisnummer:** {huisnummer}, **plaats:** {plaats}",
