--- a/new-client/public/simpleMapConfig.json
+++ b/new-client/public/simpleMapConfig.json
@@ -14,159 +14,15 @@
       "units": null
     },
     {
-      "code": "EPSG:3007",
-      "definition": "+proj=tmerc +lat_0=0 +lon_0=12 +k=1 +x_0=150000 +y_0=0 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs",
-      "extent": [60436.5084, 6192389.565, 217643.4713, 6682784.4276],
+      "code": "EPSG:28992",
+      "definition": "+proj=sterea +lat_0=52.1561605555556 +lon_0=5.38763888888889 +k=0.9999079 +x_0=155000 +y_0=463000 +ellps=bessel +towgs84=565.4171,50.3319,465.5524,1.9342,-1.6677,9.1019,4.0725 +units=m +no_defs +type=crs",
+      "extent": [482.06, 306602.42, 284182.97, 637049.52],
       "units": null
     },
     {
-      "code": "http://www.opengis.net/gml/srs/epsg.xml#3007",
-      "definition": "+proj=tmerc +lat_0=0 +lon_0=12 +k=1 +x_0=150000 +y_0=0 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs",
-      "extent": [60436.5084, 6192389.565, 217643.4713, 6682784.4276],
-      "units": null
-    },
-    {
-      "code": "EPSG:3008",
-      "definition": "+proj=tmerc +lat_0=0 +lon_0=13.5 +k=1 +x_0=150000 +y_0=0 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs ",
-      "extent": [60857.4994, 6120098.8505, 223225.0217, 6906693.7888],
-      "units": null
-    },
-    {
-      "code": "http://www.opengis.net/gml/srs/epsg.xml#3008",
-      "definition": "+proj=tmerc +lat_0=0 +lon_0=13.5 +k=1 +x_0=150000 +y_0=0 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs ",
-      "extent": [60857.4994, 6120098.8505, 223225.0217, 6906693.7888],
-      "units": null
-    },
-    {
-      "code": "EPSG:3009",
-      "definition": "+proj=tmerc +lat_0=0 +lon_0=15 +k=1 +x_0=150000 +y_0=0 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs",
-      "extent": [56294.0365, 6203542.5282, 218719.0581, 6835499.2391],
-      "units": null
-    },
-    {
-      "code": "http://www.opengis.net/gml/srs/epsg.xml#3009",
-      "definition": "+proj=tmerc +lat_0=0 +lon_0=15 +k=1 +x_0=150000 +y_0=0 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs",
-      "extent": [56294.0365, 6203542.5282, 218719.0581, 6835499.2391],
-      "units": null
-    },
-    {
-      "code": "EPSG:3010",
-      "definition": "+proj=tmerc +lat_0=0 +lon_0=16.5 +k=1 +x_0=150000 +y_0=0 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs",
-      "extent": [97213.6352, 6228930.1419, 225141.8681, 6916524.0785],
-      "units": null
-    },
-    {
-      "code": "http://www.opengis.net/gml/srs/epsg.xml#3010",
-      "definition": "+proj=tmerc +lat_0=0 +lon_0=16.5 +k=1 +x_0=150000 +y_0=0 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs",
-      "extent": [97213.6352, 6228930.1419, 225141.8681, 6916524.0785],
-      "units": null
-    },
-    {
-      "code": "EPSG:3011",
-      "definition": "+proj=tmerc +lat_0=0 +lon_0=18 +k=1 +x_0=150000 +y_0=0 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs",
-      "extent": [96664.5565, 6509617.2232, 220146.6914, 6727103.5879],
-      "units": null
-    },
-    {
-      "code": "http://www.opengis.net/gml/srs/epsg.xml#3011",
-      "definition": "+proj=tmerc +lat_0=0 +lon_0=18 +k=1 +x_0=150000 +y_0=0 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs",
-      "extent": [96664.5565, 6509617.2232, 220146.6914, 6727103.5879],
-      "units": null
-    },
-    {
-      "code": "EPSG:3012",
-      "definition": "+proj=tmerc +lat_0=0 +lon_0=14.25 +k=1 +x_0=150000 +y_0=0 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs",
-      "extent": [30462.5263, 6829647.9842, 216416.1584, 7154168.0208],
-      "units": null
-    },
-    {
-      "code": "http://www.opengis.net/gml/srs/epsg.xml#3012",
-      "definition": "+proj=tmerc +lat_0=0 +lon_0=14.25 +k=1 +x_0=150000 +y_0=0 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs",
-      "extent": [30462.5263, 6829647.9842, 216416.1584, 7154168.0208],
-      "units": null
-    },
-    {
-      "code": "EPSG:3013",
-      "definition": "+proj=tmerc +lat_0=0 +lon_0=15.75 +k=1 +x_0=150000 +y_0=0 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs ",
-      "extent": [34056.6264, 6710433.2884, 218692.0214, 7224144.732],
-      "units": null
-    },
-    {
-      "code": "http://www.opengis.net/gml/srs/epsg.xml#3013",
-      "definition": "+proj=tmerc +lat_0=0 +lon_0=15.75 +k=1 +x_0=150000 +y_0=0 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs ",
-      "extent": [34056.6264, 6710433.2884, 218692.0214, 7224144.732],
-      "units": null
-    },
-    {
-      "code": "EPSG:3014",
-      "definition": "+proj=tmerc +lat_0=0 +lon_0=17.25 +k=1 +x_0=150000 +y_0=0 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs",
-      "extent": [-1420.28, 6888655.5779, 212669.1333, 7459585.3378],
-      "units": null
-    },
-    {
-      "code": "http://www.opengis.net/gml/srs/epsg.xml#3014",
-      "definition": "+proj=tmerc +lat_0=0 +lon_0=17.25 +k=1 +x_0=150000 +y_0=0 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs",
-      "extent": [-1420.28, 6888655.5779, 212669.1333, 7459585.3378],
-      "units": null
-    },
-    {
-      "code": "EPSG:3015",
-      "definition": "+proj=tmerc +lat_0=0 +lon_0=18.75 +k=1 +x_0=150000 +y_0=0 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs",
-      "extent": [58479.4774, 6304213.2147, 241520.5226, 7276832.4419],
-      "units": null
-    },
-    {
-      "code": "http://www.opengis.net/gml/srs/epsg.xml#3015",
-      "definition": "+proj=tmerc +lat_0=0 +lon_0=18.75 +k=1 +x_0=150000 +y_0=0 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs",
-      "extent": [58479.4774, 6304213.2147, 241520.5226, 7276832.4419],
-      "units": null
-    },
-    {
-      "code": "EPSG:3016",
-      "definition": "+proj=tmerc +lat_0=0 +lon_0=20.25 +k=1 +x_0=150000 +y_0=0 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs",
-      "extent": [-93218.3385, 7034909.8738, 261434.6246, 7676279.8691],
-      "units": null
-    },
-    {
-      "code": "http://www.opengis.net/gml/srs/epsg.xml#3016",
-      "definition": "+proj=tmerc +lat_0=0 +lon_0=20.25 +k=1 +x_0=150000 +y_0=0 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs",
-      "extent": [-93218.3385, 7034909.8738, 261434.6246, 7676279.8691],
-      "units": null
-    },
-    {
-      "code": "EPSG:3017",
-      "definition": "+proj=tmerc +lat_0=0 +lon_0=21.75 +k=1 +x_0=150000 +y_0=0 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs",
-      "extent": [67451.0699, 7211342.8483, 145349.5699, 7254837.254],
-      "units": null
-    },
-    {
-      "code": "http://www.opengis.net/gml/srs/epsg.xml#3017",
-      "definition": "+proj=tmerc +lat_0=0 +lon_0=21.75 +k=1 +x_0=150000 +y_0=0 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs",
-      "extent": [67451.0699, 7211342.8483, 145349.5699, 7254837.254],
-      "units": null
-    },
-    {
-      "code": "EPSG:3018",
-      "definition": "+proj=tmerc +lat_0=0 +lon_0=23.25 +k=1 +x_0=150000 +y_0=0 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs",
-      "extent": [38920.7048, 7267405.2323, 193050.246, 7597992.2419],
-      "units": null
-    },
-    {
-      "code": "http://www.opengis.net/gml/srs/epsg.xml#3018",
-      "definition": "+proj=tmerc +lat_0=0 +lon_0=23.25 +k=1 +x_0=150000 +y_0=0 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs",
-      "extent": [38920.7048, 7267405.2323, 193050.246, 7597992.2419],
-      "units": null
-    },
-    {
-      "code": "EPSG:3021",
-      "definition": "+proj=tmerc +lat_0=0 +lon_0=15.80827777777778 +k=1 +x_0=1500000 +y_0=0 +ellps=bessel +units=m +no_defs",
-      "extent": [1392811.0743, 6208496.7665, 1570600.8906, 7546077.6984],
-      "units": null
-    },
-    {
-      "code": "http://www.opengis.net/gml/srs/epsg.xml#3021",
-      "definition": "+proj=tmerc +lat_0=0 +lon_0=15.80827777777778 +k=1 +x_0=1500000 +y_0=0 +ellps=bessel +units=m +no_defs",
-      "extent": [1392811.0743, 6208496.7665, 1570600.8906, 7546077.6984],
+      "code": "http://www.opengis.net/gml/srs/epsg.xml#28992",
+      "definition": "+proj=sterea +lat_0=52.1561605555556 +lon_0=5.38763888888889 +k=0.9999079 +x_0=155000 +y_0=463000 +ellps=bessel +towgs84=565.4171,50.3319,465.5524,1.9342,-1.6677,9.1019,4.0725 +units=m +no_defs +type=crs",
+      "extent": [482.06, 306602.42, 284182.97, 637049.52],
       "units": null
     }
   ],
@@ -181,46 +37,9 @@
             "drawOrder": 0,
             "visibleForGroups": null,
             "infobox": null
-          },
-          {
-            "id": "2",
-            "visibleAtStart": false,
-            "drawOrder": 0,
-            "visibleForGroups": null,
-            "infobox": null
-          },
-          {
-            "id": "3",
-            "visibleAtStart": false,
-            "drawOrder": 0,
-            "visibleForGroups": null,
-            "infobox": null
           }
         ],
         "groups": [
-          {
-            "id": "8838c969-590c-8683-435c-1ecaca271096",
-            "parent": "-1",
-            "name": "Länstyrelsen",
-            "toggled": true,
-            "expanded": false,
-            "layers": [
-              {
-                "id": "7",
-                "visibleAtStart": false,
-                "drawOrder": 3,
-                "visibleForGroups": null,
-                "infobox": null
-              },
-              {
-                "id": "8",
-                "visibleAtStart": false,
-                "drawOrder": 3,
-                "visibleForGroups": null,
-                "infobox": null
-              }
-            ]
-          },
           {
             "id": "9938c969-590c-8683-435c-1ecaca271096",
             "parent": "-1",
@@ -338,7 +157,7 @@
         "instruction": "",
         "visibleForGroups": [],
         "title": "Streetview",
-        "description": "bekijk hoe de omgeving eruit ziet met Google Streetview"
+        "description": "Bekijk hoe de omgeving eruit ziet met Google Streetview"
       },
       "index": 5
     },
@@ -475,10 +294,10 @@
         "instruction": "",
         "transformations": [
           {
-            "code": "EPSG:3006",
+            "code": "EPSG:28992",
             "default": true,
-            "hint": "Sweref99 TM",
-            "title": "Sweref99 TM",
+            "hint": "Rijksdriehoekstelsel",
+            "title": "Rijksdriehoekstelsel",
             "xtitle": "E",
             "ytitle": "N",
             "inverseAxis": false
@@ -563,14 +382,14 @@
         {
           "target": "left",
           "name": "announcements",
-          "headerText": "Mededelingen",
+          "headerText": "Nieuws",
           "icon": "announcement",
           "text": "Voorbeeldmededeling. Gebruik HTML of Markdown met bijvoorbeeld [links](https://www.markdownguide.org/basic-syntax/) en afbeeldingen.\n",
           "allowDangerousHtml": true,
           "useLegacyNonMarkdownRenderer": false,
           "buttonText": "OK, begrepen!",
-          "title": "Mededelingen",
-          "description": "Mededelingen over de kaart. ",
+          "title": "Nieuws",
+          "description": "Nieuws over de kaart. ",
           "visibleAtStart": false,
           "showOnlyOnce": true,
           "visibleForGroups": []
@@ -580,16 +399,16 @@
   ],
   "map": {
     "target": "map",
-    "center": [-156821.80438493052, 5822096.3129055705],
+    "center": [155000.0, 463000.0],
     "title": "Civity/Argaleo 2D kaart",
     "projection": "EPSG:3006",
     "zoom": 1.33,
-    "maxZoom": 8,
+    "maxZoom": 16,
     "minZoom": 0,
-    "resolutions": [2048, 1024, 512, 256, 128, 64, 32, 16, 8],
+    "resolutions": [3440.640, 1720.320, 860.160, 430.080, 215.040, 107.520, 53.760, 26.880, 13.440, 6.720, 3.360, 1.680, 0.840, 0.420, 0.210, 0.105],
     "extraPrintResolutions": [],
     "origin": [0, 0],
-    "extent": [-1200000.0, 4700000.0, 2600000.0, 8500000.0],
+    "extent": [482.06, 306602.42, 284182.97, 637049.52],
     "constrainOnlyCenter": false,
     "constrainResolution": false,
     "logo": "/logoLight.png",
