--- a/new-client/public/simpleLayersConfig.json
+++ b/new-client/public/simpleLayersConfig.json
@@ -3,10 +3,91 @@
     {
       "id": "1",
       "caption": "BRT achtergrondkaart",
+      "url": "https://service.pdok.nl/brt/achtergrondkaart/wmts/v2_0?",
+      "owner": null,
+      "date": "1582209573601",
+      "content": "BRT achtergrondkaart",
+      "legend": "",
+      "projection": "EPSG:28992",
+      "visibleAtStart": true,
+      "layer": "standaard",
+      "style": "default",
+      "matrixSet": "EPSG:28992",
+      "origin": ["-285401.92", "903401.92"],
+      "resolutions": [
+        "3440.640", "1720.320", "860.160", "430.080", "215.040", "107.520", "53.760", "26.880", "13.440", "6.720", "3.360", "1.680", "0.840", "0.420", "0.210", "0.105"
+      ],
+      "matrixIds": ["00", "01", "02", "03", "04", "05", "06", "07", "08", "09", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19"],
+      "attribution": "PDOK",
+      "infoVisible": false,
+      "infoTitle": "BRT achtergrondkaart in WMTS formaat",
+      "infoText": "BRT achtergrondkaart in WMTS formaat",
+      "infoUrl": "https://service.pdok.nl/brt/achtergrondkaart/wmts/v2_0?request=GetCapabilities&service=wmts",
+      "infoUrlText": "Capabilities",
+      "infoOwner": "PDOK",
+      "zIndex": null
+    },
+    {
+      "id": "2",
+      "caption": "BRT achtergrondkaart (grijstinten)",
+      "url": "https://service.pdok.nl/brt/achtergrondkaart/wmts/v2_0?",
+      "owner": null,
+      "date": "1582209573601",
+      "content": "BRT achtergrondkaart (grijstinten)",
+      "legend": "",
+      "projection": "EPSG:28992",
+      "visibleAtStart": true,
+      "layer": "grijs",
+      "style": "default",
+      "matrixSet": "EPSG:28992",
+      "origin": ["-285401.92", "903401.92"],
+      "resolutions": [
+        "3440.640", "1720.320", "860.160", "430.080", "215.040", "107.520", "53.760", "26.880", "13.440", "6.720", "3.360", "1.680", "0.840", "0.420", "0.210", "0.105"
+      ],
+      "matrixIds": ["00", "01", "02", "03", "04", "05", "06", "07", "08", "09", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19"],
+      "attribution": "PDOK",
+      "infoVisible": false,
+      "infoTitle": "Grijstinten BRT achtergrondkaart in WMTS formaat",
+      "infoText": "Grijstinten BRT achtergrondkaart in WMTS formaat",
+      "infoUrl": "https://service.pdok.nl/brt/achtergrondkaart/wmts/v2_0?request=GetCapabilities&service=wmts",
+      "infoUrlText": "Capabilities",
+      "infoOwner": "PDOK",
+      "zIndex": null
+    },
+    {
+      "id": "3",
+      "caption": "BRT achtergrondkaart (pastel)",
+      "url": "https://service.pdok.nl/brt/achtergrondkaart/wmts/v2_0?",
+      "owner": null,
+      "date": "1582209573601",
+      "content": "BRT achtergrondkaart (pastel)",
+      "legend": "",
+      "projection": "EPSG:28992",
+      "visibleAtStart": true,
+      "layer": "pastel",
+      "style": "default",
+      "matrixSet": "EPSG:28992",
+      "origin": ["-285401.92", "903401.92"],
+      "resolutions": [
+        "3440.640", "1720.320", "860.160", "430.080", "215.040", "107.520", "53.760", "26.880", "13.440", "6.720", "3.360", "1.680", "0.840", "0.420", "0.210", "0.105"
+      ],
+      "matrixIds": ["00", "01", "02", "03", "04", "05", "06", "07", "08", "09", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19"],
+      "attribution": "PDOK",
+      "infoVisible": false,
+      "infoTitle": "Pastel BRT achtergrondkaart in WMTS formaat",
+      "infoText": "Pastel BRT achtergrondkaart in WMTS formaat",
+      "infoUrl": "https://service.pdok.nl/brt/achtergrondkaart/wmts/v2_0?request=GetCapabilities&service=wmts",
+      "infoUrlText": "Capabilities",
+      "infoOwner": "PDOK",
+      "zIndex": null
+    },
+    {
+      "id": "4",
+      "caption": "Luchtfoto 2023",
       "url": "https://service.pdok.nl/hwh/luchtfotorgb/wmts/v1_0?",
       "owner": null,
       "date": "1582209573601",
-      "content": "Topowebbkartan i WMTS-format",
+      "content": "Luchtfoto 2023 in WMTS formaat",
       "legend": "",
       "projection": "EPSG:28992",
       "visibleAtStart": true,
@@ -20,9 +101,9 @@
       "matrixIds": ["00", "01", "02", "03", "04", "05", "06", "07", "08", "09", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19"],
       "attribution": "PDOK",
       "infoVisible": false,
-      "infoTitle": "BRT in WMTS formaat",
-      "infoText": "BRT in WMTS formaat",
-      "infoUrl": "https://service.pdok.nl/hwh/luchtfotorgb/wmts/v1_0?&request=GetCapabilities&service=wmts",
+      "infoTitle": "Luchtfoto 2023 in WMTS formaat",
+      "infoText": "Luchtfoto 2023 in WMTS formaat",
+      "infoUrl": "https://service.pdok.nl/hwh/luchtfotorgb/wmts/v1_0?request=GetCapabilities&service=wmts",
       "infoUrlText": "Capabilities",
       "infoOwner": "PDOK",
       "zIndex": null
@@ -67,7 +148,7 @@
       "minZoom": -1,
       "opacity": 1.0,
       "owner": "",
-      "projection": "EPSG:3006",
+      "projection": "EPSG:28992",
       "searchDisplayName": "",
       "searchFields": null,
       "searchGeometryField": "",
@@ -120,7 +201,7 @@
       "minZoom": -1,
       "opacity": 1.0,
       "owner": "",
-      "projection": "EPSG:3006",
+      "projection": "EPSG:28992",
       "searchDisplayName": "",
       "searchFields": null,
       "searchGeometryField": "",
@@ -173,7 +254,7 @@
       "minZoom": -1,
       "opacity": 1.0,
       "owner": "",
-      "projection": "EPSG:3006",
+      "projection": "EPSG:28992",
       "searchDisplayName": "",
       "searchFields": null,
       "searchGeometryField": "",
