provide minimal README (that will populate further) - add exposome configs for all envs as reference

--- a/apps/client/public/appConfig.json
+++ b/apps/client/public/appConfig.json
@@ -1,20 +1,8 @@
 {
   "mapserviceBase": "",
-  "defaultMap": "map_1",
-  "loadErrorTitle": "Ett fel har inträffat",
-  "loadErrorMessage": "Fel när applikationen skulle läsas in. Du kan försöka att återställa applikationen genom att trycka på knappen nedan. Om felet kvarstår kan du kontakta systemansvarig.",
-  "loadErrorReloadButtonText": "Återställ applikationen",
-  "announcements": [
-    {
-      "id": 1,
-      "active": true,
-      "text": "Hi, this is **Hajk**! 😃 \n\nWe hope you enjoy it. 🚀💯",
-      "showOnlyOnce": true,
-      "maps": ["map_1", "simpleMapAndLayersConfig"],
-      "timeout": 5000,
-      "startTime": "2020-06-29",
-      "stopTime": "2099-12-31",
-      "type": "info"
-    }
-  ]
+  "defaultMap": "exposome",
+  "loadErrorTitle": "Er is een fout opgetreden.",
+  "loadErrorMessage": "Fout bij het laden van de applicatie. U kunt proberen de applicatie te resetten door op de onderstaande knop te drukken. Als de fout zich blijft voordoen, neem dan contact op met de systeembeheerder.",
+  "loadErrorReloadButtonText": "De applicatie resetten",
+  "announcements": []
 }
